--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -50,12 +50,17 @@ $pf-c-page--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl",
   --pf-c-page__header-tools-group--Display: flex;
   --pf-c-page__header-tools-item--Display: block;
 
+  // Header tools notification badge
+  --pf-c-page__header-tools-item--c-notification-badge--BorderColor: var(--pf-global--BackgroundColor--dark-200);
+  --pf-c-page__header-tools-item--c-notification-badge--hover--BorderColor: transparent;
+  --pf-c-page__header-tools-item--c-notification-badge--hover--BackgroundColor: var(--pf-global--BackgroundColor--dark-200);
+
   // Header tools group button
-  --pf-c-page__header-tools--c-button--m-selected--before--Width: #{pf-size-prem(36px)};
-  --pf-c-page__header-tools--c-button--m-selected--before--Height: #{pf-size-prem(36px)};
+  --pf-c-page__header-tools--c-button--m-selected--before--Width: auto;
+  --pf-c-page__header-tools--c-button--m-selected--before--Height: auto;
   --pf-c-page__header-tools--c-button--m-selected--before--BackgroundColor: var(--pf-global--BackgroundColor--dark-200);
-  --pf-c-page__header-tools--c-button--m-selected--before--BorderRadius: var(--pf-global--BorderRadius--lg);
-  --pf-c-page__header-tools--c-button--m-selected--c-notification-badge--m-unread--after--BorderColor: var(--pf-global--BackgroundColor--dark-200);
+  --pf-c-page__header-tools--c-button--m-selected--before--BorderRadius: var(--pf-global--BorderRadius--sm); // remove at breaking change
+  --pf-c-page__header-tools--c-button--m-selected--c-notification-badge--m-unread--after--BorderColor: transparent; // remove at breaking change
 
   @media screen and (min-width: $pf-global--breakpoint--xl) {
     --pf-c-page__header-tools--MarginRight: var(--pf-c-page__header-tools--xl--MarginRight);
@@ -259,8 +264,19 @@ $pf-c-page--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl",
   @include pf-hidden-visible(var(--pf-c-page__header-tools-item--Display));
 
   .pf-c-button {
-    > * {
+    > :not(.pf-c-notification-badge) {
       position: relative;
+    }
+  }
+
+  .pf-c-notification-badge {
+    &.pf-m-read {
+      --pf-c-notification-badge--after--BorderColor: var(--pf-c-page__header-tools-item--c-notification-badge--BorderColor);
+
+      &:hover {
+        --pf-c-notification-badge--after--BackgroundColor: var(--pf-c-page__header-tools-item--c-notification-badge--hover--BackgroundColor);
+        --pf-c-notification-badge--after--BorderColor: var(--pf-c-page__header-tools-item--c-notification-badge--hover--BorderColor);
+      }
     }
   }
 
@@ -269,13 +285,14 @@ $pf-c-page--breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg", "xl",
       &::before {
         position: absolute;
         top: 0;
-        left: 50%;
-        width: var(--pf-c-page__header-tools--c-button--m-selected--before--Width);
-        height: var(--pf-c-page__header-tools--c-button--m-selected--before--Height);
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: var(--pf-c-page__header-tools--c-button--m-selected--before--Width); // remove at breaking change
+        height: var(--pf-c-page__header-tools--c-button--m-selected--before--Height); // remove at breaking change
         content: "";
         background-color: var(--pf-c-page__header-tools--c-button--m-selected--before--BackgroundColor);
         border-radius: var(--pf-c-page__header-tools--c-button--m-selected--before--BorderRadius);
-        transform: translateX(-50%);
       }
 
       // stylelint-disable
